<resources>
    <string name="app_name">Vote For You</string>
    <string name="button_great">Great</string>
    <string name="button_good">Good</string>
    <string name="button_average">Average</string>
    <string name="button_lacking">Lacking</string>
    <string name="button_terrible">Terrible</string>
    <string name="button_settings">Settings</string>
    <string name="button_results">Results</string>
    <string name="button_ranking">Ranking</string>
    <string name="button_help">Help Me</string>
    <string name="button_logout">Logout</string>
</resources>
